Correção espaçamento no layout mobile
Retirar espaçamento errado no layout mobile e listar vídeos começando pelo topo

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -363,6 +363,8 @@ button {
 
   .video-wrapper {
     justify-items: center;
+    grid-template-rows: 280px;
+    height: 100vh;
   }
 
   .center-menu {
